# genreq-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_probe.py  run_research.py  run_validator.py
src/reqgen/probe/: __init__.py  compat_table.py  cuda.py  gpu.py  schema.py
src/reqgen/research/: __init__.py  github_client.py  pypi_client.py  schema.py  web_search.py
src/reqgen/validator/: __init__.py  installer.py  parser.py  schema.py  venv_manager.py
tests/: test_probe.py  test_research.py  test_validator.py
