[project]
name = "reqgen-agent"
version = "0.1.0"
description = "AI agent that generates conflict-free, GPU/CUDA-aware requirements.txt files by probing system specs, researching package compatibility, and empirically validating candidate dependency sets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Anand" }
]

dependencies = [
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",

    # System probing
    "nvidia-ml-py>=12.560.0",
    "pydantic>=2.7.0",

    # Research
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # Validator
    "uv>=0.4.0",

    # Cache
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # General
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

# [project.scripts]
# reqgen-probe = "scripts.run_probe:main"
# reqgen-agent = "scripts.run_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reqgen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]